--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-pyqtgraph==0.10.0
-numpy==1.11.3
+pyqtgraph==0.9.10
 scipy==0.18.1
-PyQt5==5.9
-PyAudio==0.2.11
+matplotlib==1.5.1
+setuptools==36.2.7
+numpy==1.11.3
 PyDAQmx==1.3.2
+PyQt5==5.9
+kivy==1.10.0
+pyaudio==0.2.11
